[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/UI/Hexagon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Prefab/Main_Theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Prefab/M_Sections_Buttons.gd" type="Script" id=3]
[ext_resource path="res://Resources/Fonts/English_T.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "Show_Details"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("TextureRect:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, -0.56235, 0.2, 0.44988, 0.7, -0.2, -0.492873, 0.2, 0.492873 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("TextureRect:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, -0.546552, 0.2, 0.437242, 0.7, -0.2, -0.488155, 0.25, 0.610194 ),
"times": PoolRealArray( 0, 0.5 )
}

[node name="Icons" type="TextureButton"]
margin_right = 450.0
margin_bottom = 470.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 450, 470 )
theme = ExtResource( 2 )
action_mode = 0
keep_pressed_outside = true
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -235.0
margin_right = 225.0
margin_bottom = 235.0
rect_pivot_offset = Vector2( 225, 235 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="TextureRect"]
unique_name_in_owner = true
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -75.0
margin_right = -30.0
margin_bottom = 45.0
grow_vertical = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.42 )
custom_constants/shadow_offset_x = 4
custom_fonts/font = SubResource( 1 )
text = "Text"
align = 1
valign = 3
autowrap = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/Show_Details = SubResource( 3 )

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_Icons_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_timeout"]
